--- a/06-better-todos/src/assets/scss/App.scss
+++ b/06-better-todos/src/assets/scss/App.scss
@@ -25,7 +25,6 @@ body {
 	text-shadow: 1px 1px 2px black;
 }
 
-// Bakgrundsbild
 body::before {
 	content: "";
 	position: fixed;
@@ -33,7 +32,7 @@ body::before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url('/images/gym.jpg');
+	background-image: url("/images/gym.jpg");
 	background-size: cover;
 	background-position: center;
 	opacity: 0.2;
@@ -41,7 +40,6 @@ body::before {
 	pointer-events: none;
 }
 
-// Knappar
 button,
 .btn {
 	text-shadow: none;        
@@ -103,7 +101,6 @@ button,
 	}
 }
 
-// Fade/slide in
 @keyframes fadeSlideIn {
 	from {
 		opacity: 0;
@@ -115,7 +112,6 @@ button,
 	}
 }
 
-// Fade/slide out
 @keyframes fadeSlideOut {
 	from {
 		opacity: 1;
@@ -127,12 +123,10 @@ button,
 	}
 }
 
-// Klass som aktiverar in-animation
 .todo-enter {
 	animation: fadeSlideIn 0.3s ease-out;
 }
 
-// Klass som aktiverar ut-animation (läggs före borttagning)
 .todo-exit {
 	animation: fadeSlideOut 0.3s ease-in forwards;
 }
